# Toy-Ray-Tracer

./: CMakeLists.txt  README.md
app/: main.cpp
example/: example_01.cpp
include/toy_tracer/: camera.hpp  geometry_map.hpp  hit_record.hpp  hitable.hpp  math.hpp  mesh.hpp  ray.hpp  renderable.hpp  renderer.hpp  scene_node.hpp  scene_object.hpp  stl_fmt.hpp  triangle.hpp  vertex_shader.hpp  world.hpp
src/: renderer.cpp  scene_node.cpp
